# nanorun

./: .gitignore  README.md  agents.md  nanorun.toml  pyproject.toml
data/: cached_dolma_blend.py  cached_dolma_blend_sc2.py  cached_dolma_blend_smol.py  cached_fineweb10B.py  prepare_dolma_blend.py  prepare_dolma_blend_sc2.py  prepare_dolma_blend_smol.py  prepare_slowrun_data.py
experiments/medium-track/: .track.json  record18.py  record2.py
experiments/modded-nanogpt-records/: record52.py  record63.py
experiments/optimizer-records/: .track.json  record13.py  record14.py  record17.py  record19.py  record20.py  record22.py  record23.py  record25.py  record28.py  record29.py  record30.py  record31.py  record32.py  record34.py  record35.py  record38.py  record39.py  record40.py
experiments/optimizer-track-records/: .track.json  record5.py  record8.py
experiments/records/: .track.json  record11.py  record12.py  record13.py  record16.py  record17.py  record18.py  record19.py  record20.py  record21.py  record22.py  record26.py  record27.py  record28.py  record29.py  record38.py  record49.py  record50.py  record53.py  record55.py  record57.py  record58.py  record59.py  record61.py  record61_kernels.py  record62.py  record65.py  record74.py  record74_kernels.py  record77.py  record77_kernels.py  record8.py  record80.py  (+1 more)
nanorun/: __init__.py  cli.py  config.py  hub.py  lineage.py  local_daemon.py  project_config.py  queue.py  remote_control.py  remote_daemon.py  rpc_client.py  rpc_types.py  runner.py  session_connector.py  setup.py  sync.py  tracker.py
(+19 files in other folders)
