[project]
name = "nanorun"
version = "0.1.0"
description = "Experiment testing platform for NanoGPT speedruns"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "paramiko>=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "rich>=13.0",
    "huggingface-hub>=1.6.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
test = [
    "torch>=2.9.1",
]

[project.scripts]
nanorun = "nanorun.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
